--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.4.3",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "recharts": "^2.0.9",
+    "react-circular-progressbar": "^2.0.4"
   },
   "scripts": {
-    "start": "react-create-app start",
+    "start": "react-create-app --scripts-version react-scripts@4.0.3",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
